Starting to turn towards error handling. Starting to also construct unit tests for implemented requests. In addition, breaking out some of the resource methods in AdaSharpClient to separate classes.

--- a/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
+++ b/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>AdaSharp.Wallet.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
