The test project was saved in the wrong location. Oops.

--- a/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
+++ b/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AdaSharp.Wallet\AdaSharp.Wallet.csproj" />
+    <ProjectReference Include="..\..\source\AdaSharp.Wallet\AdaSharp.Wallet.csproj" />
   </ItemGroup>
 
 </Project>
