Refactoring test code. Added few more granular test cases for both /Network/Clock and /Network/Information.

--- a/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
+++ b/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
@@ -22,6 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="TestData\Node\Network\Clock\Http200-StatusIsUnavailable.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Node\Network\Clock\Http200-StatusIsPending.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\Node\Network\Clock\Http200.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
