--- a/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
+++ b/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
@@ -14,6 +14,11 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.11.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Byron\" />
   </ItemGroup>
 
 </Project>
