Since this project is somewhat following the way Amazon structures their API, decided to be consistent and put all classes that relate to the model into a 'Models' folder. It may help to keep the code better organized as the project grows.

--- a/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
+++ b/source/AdaSharp.Wallet/AdaSharp.Wallet.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Byron\" />
+    <Folder Include="Model\Byron\" />
   </ItemGroup>
 
 </Project>
