Beginning to implement DELETE for the /Wallets REST resource.

--- a/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
+++ b/tests/AdaSharp.Wallet.Tests/AdaSharp.Wallet.Tests.csproj
@@ -58,6 +58,9 @@
     <None Update="TestData\Node\Network\Parameters\Http406.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\Node\Wallets\Delete\Http204.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\Node\Wallets\Get\Http404.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
